bk_ida/gccida/c2/combine_stack_adjustments
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/combine_stack_adjustments/src/regmove.c:2658:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v7->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/combine_stack_adjustments/src/regmove.c:2659:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)v7[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/combine_stack_adjustments/src/regmove.c:2741:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( unsigned __int8 *)( v9.rtwint + 2), global_rtl[2]) ) 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/combine_stack_adjustments/src/obj/regmove.o] Error 1
